# matchmaker-rs

./: Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yaml
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: release.yml
benchmark/: main.py  pyproject.toml
bruno/: bruno.json  create unrated queue.bru  get queues.bru  join queue.bru
common/: Cargo.toml  README.md
common/src/: codec.rs  entry.rs  gamefinder.rs  lib.rs  matchmaker.rs  queue.rs  queue_entry.rs  queue_executor.rs  queue_tracker.rs  registry.rs  storage.rs
common/src/algo/: elo.rs  flexible.rs  mod.rs
core/: Cargo.toml  README.md
core/src/: matchmaker.rs  queue.rs  queue_entry.rs  queue_tracker.rs
core/src/algo/: flexible.rs  mod.rs
http-api/: Cargo.toml  build.rs
http-api/src/: data.rs  game_routes.rs  main.rs  queue_routes.rs  routes.rs  state.rs
http-api/src/socket/: mod.rs
matchamker/: bruno.json  create flexible matchmaker.bru  list queues.bru
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
queues/: example.json
src/: main.rs
src/api/: endpoints-old.rs  endpoints.rs  mod.rs  queue_endpoints.rs  queue_sockets.rs
src/api/requests/: requests.rs
src/game/: game.rs  game_provider.rs  mod.rs  providers.rs
src/matchmaker/: addends.rs  implementations.rs  matchmaker.rs  mod.rs  serializer.rs  store.rs
src/matchmaker/addends/: addends.rs  mod.rs
src/queues/: mod.rs  queue.rs  queue_entry.rs  queue_pool.rs  queue_store.rs  queue_ticker.rs
