[package]
name = "matchmaker-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.11.0", features = ["v4", "serde"] }
num = "0.4.3"
serde = { version = "1.0", features = ["default", "derive"] }
serde_json = { version = "1.0.133" }
actix-web = "4.9.0"
tokio = "1.42.0"
log = "0.4.22"
env_logger = "0.11.5"