[package]
name = "matchmaker-rs"
version = "0.1.0"
edition = "2021"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]

[dependencies]
uuid = { version = "1.11.0", features = ["v4", "serde"] }
num = "0.4.3"
serde = { version = "1.0", features = ["default", "derive"] }
serde_json = { version = "1.0.133" }
actix-web = "4.9.0"
tokio = "1.42.0"
log = "0.4.22"
chrono = "0.4.39"
env_logger = "0.11.5"
actix-ws = "0.3.0"