[package]
name = "matchmaker"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.17.0", features = ["v4"] }
jsonpath-rust = "1.0.3"
serde = { version = "1.0.219" , features = ["derive"]}
serde_json = "1.0.140"

[workspace]
members = [
    "common",
    "http-api"
]

[profile.profiling]
inherits = "release"
debug = true
