[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
lazy_static = "1.5.0"
serde = { version = "1.0.219" , features = ["derive"]}
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
jsonpath-rust = "1.0.3"
toml = "0.9.2"