[package]
name = "http-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features=["macros", "default"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tracing-subscriber = "0.3.19"
common = { path = "../common" }
log = "0.4.27"
env_logger = "0.11.8"
