[package]
name = "http-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features=["macros", "default", "ws"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tracing = { version = "0.1.41", features = ["std", "log"] }
tracing-subscriber = "0.3.19"
common = { path = "../common" }
futures-util = "0.3.31"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
tower-http = { version = "0.6.6", features = ["trace"] }
